--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
+    "postcss-loader": "^6.2.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "qs": "^6.10.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.25.0",
