--- a/ChromePlugin/manifest.json
+++ b/ChromePlugin/manifest.json
@@ -41,8 +41,9 @@
             "matches": ["http://*/*", "https://*/*"],
             "js": [
                 "scripts/jquery-1.8.3.js",
-                "scripts/content-script.js",
-                "scripts/jquery.Jcrop.min.js"
+                "scripts/html2canvas.js",
+                "scripts/jquery.Jcrop.min.js",
+                "scripts/content-script.js"
             ],
             "css": [
                 "css/jquery.Jcrop.min.css",
