--- a/ChromePlugin/manifest.json
+++ b/ChromePlugin/manifest.json
@@ -40,6 +40,13 @@
         {
             "matches": ["http://*/*", "https://*/*"],
             "js": [
+                "scripts/content-script1.js"
+            ],
+            "run_at": "document_start"
+        },
+        {
+            "matches": ["http://*/*", "https://*/*"],
+            "js": [
                 "scripts/jquery-1.8.3.js",
                 "scripts/jquery.Jcrop.min.js",
                 "scripts/content-script.js"
@@ -48,14 +55,7 @@
                 "css/jquery.Jcrop.min.css",
                 "css/source_iq.css"
             ],
-            "run_at": "document_idle"
-        },
-        {
-            "matches": ["http://*/*", "https://*/*"],
-            "js": [
-                "scripts/content-script1.js"
-            ],
-            "run_at": "document_start"
+            "run_at": "document_end"
         }
     ],
     "default_locale": "en"
