--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -40,7 +40,7 @@
         {
             "matches": ["http://*/*", "https://*/*"],
             "js": [
-                "scripts/content-script1.js"
+                "scripts/content-script-first.js"
             ],
             "run_at": "document_start"
         },
