修复插件引用sourceMap的cookie相关bug（插件仍然报错没解决）

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -16,7 +16,8 @@
     "background": {
         "scripts": [
             "scripts/jquery-1.8.3.js",
-            "scripts/background.js"
+            "scripts/background.js",
+			"scripts/source_map.js"
         ]
     },
     "permissions": [
