Revert "去除插件没有用到的权限，删除不相关属性"
This reverts commit b67d52b98ffa6fefaeda2ec851f895a36d4e4226.

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -23,6 +23,9 @@
     "permissions": [
         "contextMenus",
         "tabs",
+        "notifications",
+        "webRequest",
+        "webRequestBlocking",
         "storage",
         "http://*/*",
         "https://*/*",
@@ -30,6 +33,10 @@
          "activeTab",
 		 "cookies"
     ],
+    "homepage_url": "https://www.baidu.com",
+    "omnibox": {
+        "keyword": "go"
+    },
     "content_scripts": [
         {
             "matches": ["http://*/*", "https://*/*"],
